# Echo

./: README.md  pyproject.toml
src/echo/: __init__.py  server.py
src/echo/core/: __init__.py  aggregations.py  periods.py  registry.py  types.py
src/echo/providers/: __init__.py  base.py
src/echo/providers/cross/: __init__.py  timeline.py
src/echo/providers/films/: __init__.py  summary.py  taste.py  watchlist.py
src/echo/providers/gaming/: __init__.py  library_overview.py  summary.py  taste.py
src/echo/providers/music/: __init__.py  summary.py  taste.py
src/echo/providers/shows/: __init__.py  summary.py  taste.py  watchlist.py
src/echo/tools/: __init__.py  cross_tools.py  film_tools.py  gaming_tools.py  music_tools.py  query_tools.py  show_tools.py
tests/: conftest.py  test_aggregations.py  test_cross_timeline.py  test_films_provider.py  test_films_summary.py  test_films_taste.py  test_films_watchlist.py  test_gaming_library_overview.py  test_gaming_provider.py  test_gaming_summary.py  test_gaming_taste.py  test_music_provider.py  test_music_summary.py  test_music_taste.py  test_periods.py  test_query_tools.py  test_registry.py  test_shows_provider.py  test_shows_summary.py  test_shows_taste.py  test_shows_watchlist.py
